# gilded-rose

./: README.md  pyproject.toml
api/: app.py
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  setupTests.tsx
frontend/src/__tests__/: App.test.tsx
frontend/src/api/: endpoints.production.config.jsx
frontend/src/components/: DomManipulator.tsx
frontend/src/components/buttons/: FancyButton.jsx
frontend/src/components/header/: MarqueeHeader.tsx
frontend/src/components/table/: TableRow.jsx
frontend/src/models/: schema.jsx
frontend/src/utils/: database.config.ts
frontend/src/utils/api/: fetchThingys.ts
frontend/src/utils/helpers/: randomStyles.js
frontend/src/utils/styles/components/random/nested/: tableStyles.css
frontend/src/utils/styles/components/random/nested/deep/: buttonStyles.css.js  buttonStyles.js
