[project]
name = "gilded-rose-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Ned Reid",email = "Ned.Reid@softwire.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0,<4.0",
    "flask-cors>=4.0,<5.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
